--- a/automation/services/mina-bp-stats/leaderboard-ui/web-dev/php/responsive.css
+++ b/automation/services/mina-bp-stats/leaderboard-ui/web-dev/php/responsive.css
@@ -316,7 +316,7 @@
         text-align: center;
     }
     .table thead th {
-        vertical-align: middle;
+        vertical-align: top;
     }
     .text-left {
         text-align: left!important;
